before adding 3rd type combo